# fermat

./: .gitignore  1  1.txt  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  setup.py
benchmark/: CMakeLists.txt  README.md  bitset_bench.cc  buffer64_bench.cc  buffer_bench.cc  config.h  cord_formatter.h  deque_bench.cc  find_char_bench.cc  hash_map_bench.cc  iobuf_benchmark.cc  k_queue_bench.cc  list_bench.cc  lru_cache.cc  malloc_bench.cc  pool_bench.cc  pri_queue_bench.cc  reference_ptr_bench.cc  resource_bench.cc  sort_bench.cc  stack_bench.cc  stream_bench.cc  string64_bench.cc  string_bench.cc  vector_bench.cc  vector_map_set_bench.cc
benchmark/uri/: CMakeLists.txt  bbc_bench.cc  bench.cc  bench_search_params.cc  benchmark_header.h  benchmark_template.cc  model_bench.cc  percent_encode.cc  wpt_bench.cc
cmake/: fermat_config.cmake.in  fermat_cxx_config.cmake  fermat_deps.cmake  fermat_user_option.cmake
cmake/deb/: postinst.in
cmake/rpm/: postinst.in
examples/: cord_buffer.h  deque.h  foo_ex.cc  object_pool.h
fermat/: CMakeLists.txt  action.h  algorithm.h  all.h  at.h  back.h  begin_end.h  compare.h  cord_buffer.cc  cord_buffer.h  core.h  data.h  distance.h  empty.h  fake.cc  foo.cc  front.h  functional.h  getlines.h  index.h  iobuf_profiler.cc  iobuf_profiler.h  istream_range.h  iterator.h  iterator_range.h  main.cc  numeric.h  range.h  range_access.h  range_concepts.h  range_for.h  range_fwd.h  range_traits.h  reader_writer.h  size.h  span.h  to_container.h  uri.h  uri_c.h  utility.h  (+5 more)
fermat/action/: action.h  adjacent_remove_if.h  concepts.h  drop.h  drop_while.h  erase.h  insert.h  join.h  push_back.h  push_front.h  remove.h  remove_if.h  reverse.h  shuffle.h  slice.h  sort.h  split.h  split_when.h  stable_sort.h  stride.h  take.h  take_while.h  transform.h  unique.h  unstable_remove_if.h
fermat/algorithm/: adjacent_find.h  adjacent_remove_if.h  all_of.h  any_of.h  binary_search.h  contains.h  contains_subrange.h  copy.h  copy_backward.h  copy_if.h  copy_n.h  count.h  count_if.h  ends_with.h  equal.h  equal_range.h  fill.h  fill_n.h  find.h  find_end.h  find_first_of.h  find_if.h  find_if_not.h  fold.h  fold_left.h  fold_right.h  for_each.h  for_each_n.h  generate.h  generate_n.h  heap_algorithm.h  inplace_merge.h  is_partitioned_test.h  is_sorted.h  is_sorted_until.h  lexicographical_compare.h  lower_bound.h  max.h  max_element.h  merge.h  (+44 more)
fermat/base/: eabase.h  int128.h
fermat/concepts/: compare.hpp  concepts.hpp  swap.hpp  type_traits.hpp
fermat/container/: bitmap_view.h  bitset.h  buffer.h  buffer_queue.h  call_traits.h  compressed_pair.h  construct.h  cord_buffer.h  cord_input_stream.h  cord_output_stream.h  customer.h  deque.h  enumerate.h  expected.h  fixed_vector.h  heap.h  intrusive_list.h  list.h  lru_cache.h  old_buffer.h  peeker.h  priority_queue.h  reader_writer.h  receiver.h  reference_ptr.h  ring_buffer.h  sort.h  sorted_queue.h  stack.h  stl.h  string.h  traits.h  utility.h  vector.h  vector_map.h  vector_multimap.h  vector_multiset.h  vector_set.h  window_cord.h
fermat/deprecate/: resource_pool.h
fermat/detail/: adl_get.h  config.h  prologue.h  range_access.h  satisfy_boost_range.h  variant.h  with_braced_init_args.h
fermat/functional/: arithmetic.h  bind.h  bind_back.h  comparisons.h  compose.h  concepts.h  identity.h  indirect.h  invoke.h  not_fn.h  on.h  overload.h  pipeable.h  reference_wrapper.h
fermat/io/: appender.h  binary_printer.cc  binary_printer.h  buffer_lease.cc  buffer_lease.h  cord_buffer.h  customer.h  fd_guard.h  iobuf.cc  iobuf.h  iobuf_base.cc  iobuf_base.h  peeker.cc  peeker.h  reader.cc  reader.h  reader_writer.h  receiver.h  sysio.cc  sysio.h  writer.cc  writer.h
fermat/iterator/: access.h  associated_types.h  basic_iterator.h  common_iterator.h  concepts.h  counted_iterator.h  default_sentinel.h  diffmax_t.h  insert_iterators.h  move_iterators.h  operations.h  reverse_iterator.h  stream_iterators.h  traits.h  unreachable_sentinel.h
fermat/memory/: allocator.h  arena.cc  arena.h  checked_math.h  maclloc.cc  malloc.cc  malloc.h  object_pool.h  resource_pool.cc  resource_pool.h
fermat/meta/: meta.h
fermat/numeric/: accumulate.h  adjacent_difference.h  inner_product.h  iota.h  partial_sum.h
fermat/range/: access.h  concepts.h  conversion.h  dangling.h  operations.h  primitives.h  traits.h
fermat/types/: algorithm.h  bit.h  compare.h  deque.h  expected.h  list.h  memory.h  meta.h  numeric.h  queue.h  random.h  segmented_vector.h  slist.h  sort.h  type_traits.h
fermat/uri/: ada_idna.cpp  ada_idna.h  ada_version.h  character_sets-inl.h  character_sets.h  checkers-inl.h  checkers.cpp  checkers.h  common_defs.h  encoding_type.h  expected.h  helpers.cpp  helpers.h  idna.cpp  idna.h  implementation.cpp  implementation.h  log.h  parser.cpp  parser.h  scheme-inl.h  scheme.h  serializers.cpp  serializers.h  state.h  unicode-inl.h  unicode.cpp  unicode.h  uri.cc  uri_c.cpp  url-getters.cpp  url-inl.h  url-setters.cpp  url.cpp  url.h  url_aggregator-inl.h  url_aggregator.cpp  url_aggregator.h  url_base-inl.h  url_base.h  (+5 more)
fermat/utility/: addressof.h  any.h  associated_types.h  basic_iterator.h  box.h  common_iterator.h  common_tuple.h  common_type.h  compressed_pair.h  concepts.h  copy.h  counted_iterator.h  dangling.h  functional.h  get.h  in_place.h  infinity.h  invoke.h  iterator.h  iterator_concepts.h  iterator_traits.h  memory.h  move.h  nullptr_v.h  optional.h  polymorphic_cast.h  random.h  scope_exit.h  semiregular.h  semiregular_box.h  static_const.h  swap.h  tagged_pair.h  tagged_tuple.h  tuple_algorithm.h  unreachable.h  variant.h
fermat/view/: adaptor.h  addressof.h  adjacent_filter.h  adjacent_remove_if.h  all.h  any_view.h  bounded.h  c_str.h  cache1.h  cartesian_product.h  chunk.h  chunk_by.h  common.h  concat.h  const.h  counted.h  cycle.h  delimit.h  drop.h  drop_exactly.h  iota.h  (+53 more)
fuzz/: buffer_lease.cc  buffer_lease.h
kmcmake/: kmcmake_option.cmake
tests/: CMakeLists.txt  foo_doctest.cc  foo_test.cc  kmstring_benchmark.cpp  kmstring_test.cpp  test_utils.h
(+337 files in other folders)
